[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["LattaruoloAndrea <lattaruolo.96@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.138.2"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
sqlalchemy = "^2.0.51"
psycopg = {extras = ["binary"], version = "^3.3.4"}
python-multipart = "^0.0.32"
aiofiles = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
